--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.twitch.tv/Saschahi">My Stream</a>
+                    <a class="nav-link" href="https://www.twitch.tv/Buz5">My Stream</a>
                 </li>
             </ul>
         </div>
