--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
     <title>Saschahi's Public Project-T Shop Addon Pricelist</title>
     <script type="text/javascript">
-        const itemListURL = "https://raw.githubusercontent.com/saschahi/TerrariaList/master/ItemList.json";
-        const NPCListURL = "https://raw.githubusercontent.com/saschahi/TerrariaList/master/NPCList.json";
-		const BuffListURL = "https://raw.githubusercontent.com/saschahi/TerrariaList/master/BuffList.json";
+        const itemListURL = "https://raw.githubusercontent.com/Buz5/TerrariaList/master/ItemList.json";
+        const NPCListURL = "https://raw.githubusercontent.com/Buz5/TerrariaList/master/NPCList.json";
+		const BuffListURL = "https://raw.githubusercontent.com/Buz5/TerrariaList/master/BuffList.json";
     </script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Saschahi</a>
+        <a class="navbar-brand" href="#">Buz5</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
